src/objects/FSTR__PCE_Step_Field_Validation__c.object
<CustomObject>
    <fields>
        <fullName>FSTR__DataType__c</fullName>
        <inlineHelpText>Field to store the data type corresponding to field name</inlineHelpText>
        <label>DataType</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Field_Name__c</fullName>
        <inlineHelpText>Actual name of the field being evaluated.</inlineHelpText>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Field_Value__c</fullName>
        <inlineHelpText>Value that the field is evaluated against.</inlineHelpText>
        <label>Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Joining_Operator__c</fullName>
        <inlineHelpText>If there are multiple dependent field values this field indicates how this value is combined with the other values</inlineHelpText>
        <label>Joining Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AND</fullName>
                    <default>true</default>
                    <label>AND</label>
                </value>
                <value>
                    <fullName>OR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSTR__Lookup_Name__c</fullName>
        <description>If criteria is a lookup criteria to another record, this field will store the name of the record looked up to while Field_value__c stores the Id.</description>
        <label>Lookup Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Object_Name__c</fullName>
        <inlineHelpText>Name of the object that the field corresponds to.</inlineHelpText>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Operator__c</fullName>
        <inlineHelpText>Indicates how the Field is compared to the Field Value field.</inlineHelpText>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&lt;</fullName>
                </value>
                <value>
                    <fullName>&lt;=</fullName>
                </value>
                <value>
                    <fullName>&gt;</fullName>
                </value>
                <value>
                    <fullName>&gt;=</fullName>
                </value>
                <value>
                    <fullName>=</fullName>
                </value>
                <value>
                    <fullName>!=</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSTR__Step__c</fullName>
        <label>Step</label>
        <referenceTo>FSTR__PCE_Step__c</referenceTo>
        <relationshipName>Step_Field_Validations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Step Validation Rules</label>
    <nameField>
        <displayFormat>SFV{000000}</displayFormat>
        <label>Step Validation Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Step Validation Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>